<resources>
    <string name="app_name">SGF Fälthandbok</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="innehall">Innehåll</string>
    <string name="videor">Videor</string>
    <string name="search">Search</string>
    <string name="sok___">Sök...</string>
    <string name="dokument">Dokument</string>
    <string name="sok">Sök</string>
    <string name="f_r_kort_s_ktext">För kort söktext...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clearsearch">clearSearch</string>
    <string name="denna_app_har_skapats_av_bucket_o_pixels">Denna app har skapats av Bucket o\' Pixels.</string>
    <string name="om">Om</string>
    <string name="kontaktinformation_klicka_f_r_att_kopiera">Kontaktinformation (klicka för att kopiera):</string>
    <string name="bucketopixelscompany_gmail_com">bucketopixelscompany@gmail.com</string>
    <string name="email">Email:</string>
</resources>
